--- a/styles/style.css
+++ b/styles/style.css
@@ -151,20 +151,46 @@ main > section{
     max-width: 540px;
 }
 
+ /* sponsor related styles */
+ .sponsors-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
+
 /* Responsive media query */
 @media screen and (max-width: 576px) {
     .navbar, .nav-link, .teams{
         flex-direction: column;
     }
 
-    .team-image-container{
+    .team-image-container, .facts-container, .sponsor-companies{
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    .facts-container{
+        justify-items: center;
+        gap: 24px;
+    }
+
+    .sponsor-companies{
+        justify-items: center;
+        gap: 50px;
     }
 
     .our-features{
         margin-left: 20px;
     }
-}
 
 /* medium size device */
 @media screen and (min-width: 576px) and (max-width: 992px) {
@@ -173,5 +199,11 @@ main > section{
     }
     .our-features{
         margin-left: 50px auto;
+        
     }
+}
+
+.sponsor-companies, .facts-container{
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
 }
